tests/paczka1/small_fuzzy/81134455.err
Error in line 1: oI2bc A494 76,6
Error in line 4: S143 S19 57,1
Error in line 8: S143 S850 78,0
Error in line 10: Pu2w S850 66,0
Error in line 13: S143 A494 15,0
